# gazebo-inverted-pendulum

./: .gitignore  CMakeLists.txt  README.md
models/pioneer2dx_ball/: model.config  model.sdf
plugins/: InvertedPendulumControllerPlugin.cpp  InvertedPendulumControllerPlugin.h
scripts/: setup.sh
worlds/: bot_world.world
